--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my-app",
- 
- "homepage": "https://alyona-nad.github.io/RIP_frontend",
+  "homepage": "https://alyona-nad.github.io/RIP_frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,11 +13,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.17.0",
+    "semantic-ui-react": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
